# eDoppelTest-for-Apollo-8.0

./: .gitignore  config.py  dev_start.py  install_apollo.py  main.py  pyproject.toml  utils.py
apollo/: __init__.py  apollo_container.py  apollo_runner.py  cyber_bridge.py  map_service.py  message_broker.py  utils.py
apollo/proto_v7/modules/: __init__.pyi
apollo/proto_v7/modules/audio/proto/: audio_common_pb2.py  audio_conf_pb2.py  audio_event_pb2.py  audio_pb2.py
apollo/proto_v7/modules/bridge/proto/: udp_bridge_remote_info_pb2.py
apollo/proto_v7/modules/canbus/proto/: canbus_conf_pb2.py  ch_pb2.py  chassis_detail_pb2.py  chassis_pb2.py  devkit_pb2.py  ge3_pb2.py  lexus_pb2.py  neolix_edu_pb2.py  transit_pb2.py  vehicle_parameter_pb2.py  wey_pb2.py  zhongyun_pb2.py
apollo/proto_v7/modules/common/: __init__.pyi
apollo/proto_v7/modules/common/proto/: direction_pb2.py  drive_event_pb2.py  drive_state_pb2.py  error_code_pb2.py  geometry_pb2.py  header_pb2.py  pnc_point_pb2.py  vehicle_signal_pb2.py
apollo/proto_v7/modules/common/util/: __init__.pyi
apollo/proto_v7/modules/contrib/: __init__.pyi
apollo/proto_v7/modules/data/: __init__.pyi
apollo/proto_v7/modules/dreamview/: __init__.pyi
apollo/proto_v7/modules/drivers/: __init__.pyi
apollo/proto_v7/modules/map/: __init__.pyi
apollo/proto_v7/modules/perception/: __init__.pyi
apollo/proto_v7/modules/tools/: __init__.pyi
apollo/proto_v8/modules/: __init__.pyi
apollo/proto_v8/modules/common_msgs/: __init__.pyi
apollo/scripts/: dev_start.sh  multi_ctn_dev_start.sh
benchmark_construction/: scenario_1.py
data/scripts/misc/: py_proto.sh  py_protol.sh
eDoppelTest/: __init__.py  collision_fitness.py  genetic_operators.py  scenario_generator.py  scenario_runner.py  traffic_control_manager.py
eDoppelTest/oracles/: OracleManager.py  ViolationTracker.py  __init__.py
eDoppelTest/oracles/impl/: CollisionOracle.py  ModuleOracle.py  StopSignOracle.py  TrafficSignalOracle.py
eDoppelTest/representation/: PedestrianManager.py  ScenarioRunner.py  TrafficControlManager.py  __init__.py  ad_agents.py  pd_agents.py  scenario.py  tc_config.py  traffic_control.py  vehicle.py
test/: test_broker.py  test_collision.py  test_runner.py  test_scenario.py
(+304 files in other folders)
