[tool.poetry]
name = "edoppeltest"
version = "0.1.0"
description = ""
authors = ["Yuqi Huai <yhuai@uci.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cyber-record = "^0.1.12"
loguru = "^0.7.0"
absl-py = "^1.4.0"
nanoid = "^2.0.0"
docker = "^6.1.3"
shapely = "^2.0.1"
networkx = "^3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = ['apollo/proto_v8', 'tests', 'data/apollo']

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ['modules', 'tests', '.venv', 'data/apollo']
